--- a/styles.css
+++ b/styles.css
@@ -17,5 +17,42 @@ body {
 #container {
 	width: 30%;
 	padding: 32px;
+	border-radius: 24px;
 	background-color: rgba(0, 0, 0, 0.5);
+
+	display: flex;
+	flex-direction: column;
+	gap: 24px;
+}
+
+#input_div {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 6px;
+}
+
+button {
+	padding: 8px;
+	background-color: transparent;
+	border: none;
+	border-radius: 50%;
+
+	display: flex;
+	align-items: center;
+
+	transition: all 300ms;
+}
+
+button:hover {
+	background-color: rgb(0, 0, 0, 0.2);
+}
+
+input {
+	border: none;
+	outline: none;
+	border-radius: 100vw;
+	background-color: rgb(0, 0, 0, 0.2);
+	padding: 6px 10px;
+	font-size: 1rem;
 }
