--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ body {
 	gap: 24px;
 }
 
-#input_div {
+form {
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -46,9 +46,12 @@ button {
 
 button:hover {
 	background-color: rgb(0, 0, 0, 0.2);
+	cursor: pointer;
 }
 
 input {
+	width: 100%;
+	max-width: 75%;
 	border: none;
 	outline: none;
 	border-radius: 100vw;
@@ -65,9 +68,22 @@ input {
 
 	:first-child {
 		font-size: 1.45rem;
+
+		> span {
+			font-size: 1.45rem;
+			color: #dbeafe;
+		}
 	}
 
 	:nth-child(2) {
 		font-size: 1.9rem;
+
+		> span {
+			font-size: 1.9rem;
+		}
+	}
+
+	:last-child {
+		font-size: 1.2rem;
 	}
 }
