--- a/styles.css
+++ b/styles.css
@@ -9,16 +9,20 @@
 
 body {
 	height: 100vh;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+
 	display: grid;
 	place-items: center;
-	background-color: #cbd5e1;
 }
 
 #container {
 	width: 30%;
-	padding: 32px;
+	padding: 50px;
 	border-radius: 24px;
 	background-color: rgba(0, 0, 0, 0.5);
+	backdrop-filter: blur(14px);
 
 	display: flex;
 	flex-direction: column;
@@ -86,4 +90,8 @@ input {
 	:last-child {
 		font-size: 1.2rem;
 	}
+}
+
+#placeName {
+	text-transform: capitalize;
 }
