--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,9 @@ body {
 
 	display: flex;
 	flex-direction: column;
-	gap: 24px;
+	gap: 32px;
+
+	box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
 }
 
 form {
@@ -49,17 +51,18 @@ button {
 }
 
 button:hover {
-	background-color: rgb(0, 0, 0, 0.2);
+	background-color: rgb(0, 0, 0, 0.3);
 	cursor: pointer;
 }
 
 input {
 	width: 100%;
 	max-width: 75%;
+	min-width: 100px;
 	border: none;
 	outline: none;
 	border-radius: 100vw;
-	background-color: rgb(0, 0, 0, 0.2);
+	background-color: rgb(0, 0, 0, 0.3);
 	padding: 6px 10px;
 	font-size: 1rem;
 }
