--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ body {
 	display: flex;
 	flex-direction: column;
 	gap: 32px;
-
+	color: rgb(106, 90, 205);
 	box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
 }
 
@@ -97,4 +97,35 @@ input {
 
 #placeName {
 	text-transform: capitalize;
+}
+
+/* loader */
+.loader-wrapper {
+	position: absolute;
+
+	height: 100%;
+	width: 100%;
+	display: grid;
+	place-items: center;
+
+	background-color: rgb(0 0 0 / 20%);
+	backdrop-filter: blur(15px);
+}
+
+.loader {
+	border-radius: 50%;
+	height: 42px;
+	width: 42px;
+	border: 6px solid #9ca3af;
+	border-top-color: #2563eb;
+	animation: loader 2s infinite;
+}
+
+@keyframes loader {
+	from {
+		transform: rotate(0deg);
+	}
+	to {
+		transform: rotate(360deg);
+	}
 }
